Fixed bug with smooth scroll getting stuch on mobile. Added frames around button and map image. Adjusted animations for calculator. Added on hover animation for map. Made layout more consistent and changed background of calculator and other minor fixes in layout.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,14 @@
 @keyframes modalShowUp {
     0% {
         transform: scale(0); 
+        opacity: 0;
     }
     50% {
         transform: scale(0); 
     }
     100% {
         transform: scale(1); 
+        opacity: 1;
     }
 }
   
@@ -22,11 +24,13 @@
 @keyframes modalButtonShowUp{
     0%{
         opacity: 0;
-        transform:scale(200);
     }
-
     80%{
+        transform:scale(5);
         opacity: 0;
+    }
+    81%{
+        opacity: 0.9;
     }
     100%{
         opacity: 1;
@@ -168,6 +172,28 @@ nav a{
     min-height: 20rem;
 }
 
+.img-container{
+    text-align: center;
+    width: 100%;
+}
+
+#img-area-map{
+    border: 3px solid var(--grey);
+    border-radius: 0.5rem;
+    transition: 1s;
+    width: 100%
+}
+
+#img-area-map:hover{
+    transform: scale(1.1);
+    opacity: 0.9;
+}
+
+#section-calculator{
+    background-color: var(--blue);
+    color: var(--white);
+}
+
 #section-calculator>h2{
     padding: 1rem 0;
 }
@@ -201,7 +227,7 @@ nav a{
     text-align: right;
     cursor: pointer; 
     width: 100%;
-    border-radius: 0.3rem;
+    border-radius: 0.5rem;
     font-family: 'Maven Pro', sans-serif;
     color: var(--main-2);
     background-color: var(--white);
@@ -214,7 +240,8 @@ nav a{
 
 #form-water-calculator input{
     font-family: 'Maven Pro', sans-serif;
-    width: 4rem;
+    width: 2rem;
+    padding-right: 1rem;
 }
 
 #form-water-calculator input:focus, #form-water-calculator select:focus{
@@ -233,26 +260,26 @@ nav a{
 
 #form-water-calculator button{
     font-size: 1.2rem;
-    background-color: var(--blue);
+    background-color: var(--main-1);
     color: var(--white);
-    border: 1px solid var( --main-2);
-    border-radius: 0.3rem;    
+    border: 3px solid var( --grey);
+    border-radius: 0.5rem;    
     padding: 0.5rem;
     font-weight: bold;
-    box-shadow: 3px 3px 6px 0px var( --main-2);
+    box-shadow: 3px 3px 9px 2px var( --main-2);
     text-align: center;
     transition: 0.2s;
     margin: 1rem 0;
-    text-shadow: 2px 2px 8px var(--main-2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
 #form-water-calculator button:hover{
-    cursor: pointer;
-    background-color: var(--main-1);    
+    cursor: pointer;    
+    text-shadow: 0px 0px 1px var(--white);
 }
 
 #form-water-calculator button:focus{
-    outline: none;
+    outline: none; 
 }
 
 #form-water-calculator button:active{
@@ -273,6 +300,7 @@ nav a{
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
     animation: backgroundShowUp 0.5s;
+    color: var(--main-2)
 }
 
 .modal-content {
@@ -308,6 +336,7 @@ nav a{
 
 .close-action:hover{
     transform: scale(1.2);
+    cursor: pointer; 
 }
   
 .modal-body{
@@ -333,8 +362,8 @@ nav a{
 
 .modal-box-button-outer-div{
     display: inline-block;
-    box-shadow: 3px 3px 9px 1px var( --main-2);
-    border: 1px solid var(--main-2);
+    box-shadow: 4px 4px 8px 5px rgba(0,0,0,0.5);
+    border: 3px solid var( --grey);
     border-radius: 0.5rem;
     background-color: var(--blue);
     margin: 0.5rem;
@@ -347,7 +376,7 @@ nav a{
     text-align: center;
     font-weight: 900;
     text-transform: uppercase;
-    text-shadow: 2px 2px 8px var(--main-2);
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
 }
 
 .modal-box-button-outer-div:active{
@@ -356,7 +385,7 @@ nav a{
 
 .modal-box-button-outer-div:active{
     transform: translate(2px, 2px);
-    box-shadow: 0 0 3px 1px var(--main-2);
+    box-shadow: 0 0 3px 1px rgba(0,0,0,0.5);
 }
 
 .modal-box-button-inner-div{    
